Fix spacing issue on print page one

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -75,7 +75,8 @@ md-sidenav {
 @media print {
   md-sidenav,
   md-toolbar,
-  md-card {
+  md-card,
+  .options {
     display: none !important;
   }
 
